# funsomware

./: .gitignore  Cargo.toml  OBFUSCATION.md  README.md  build.rs  convert_icon.py  generate_test_files.py  generate_wallpaper.py  obfuscate.sh  setup_windows_build.sh
.github/workflows/: build-windows-obfuscated.yml  build-windows.yml
rsrc/: icon.rc  manifest.xml  resources.rc
src/: antianalysis.rs  config.rs  crypto.rs  lib.rs  main.rs  messagebox_spawner.rs  wallpaper_manager.rs  worker.rs
tests/: integration_tests.rs
